Update 프로그래밍 문법과 로직 최종.md

--- a/ABAP 기초/프로그래밍 문법과 로직 최종.md
+++ b/ABAP 기초/프로그래밍 문법과 로직 최종.md
@@ -1726,6 +1726,428 @@ ENDFORM.
 # 프로그래핑 문법과 로직 (11.20).md
 </br>
 
+## < SE11 ABAP Dictionary에서 정의하는 타입 >
+**1) 데이터필드 (단일 필드 데이터 타입)**
+- 숫자 1개, 문자열 1개 등 값 하나만 저장하는 타입
+```abap
+DATA 변수명 TYPE 데이터타입.
+```
+```abap
+DATA gv_price TYPE p DECIMALS 2.
+DATA gv_name  TYPE char20.
+```
+</br>
+</br>
+
+**2-1) Structure 타입**
+- 여러 개의 필드(컴포넌트)를 묶은 하나의 "작업공간(Work Area)"
+- SE11에서 Structure 로 정의된 타입 사용 가능
+- 또는 LOCAL TYPES 로 직접 선언 가능
+```abap
+DATA 구조체변수명 TYPE 글로벌_구조체명.
+```
+```abap
+DATA gs_flight TYPE bc400_s_flight.
+```
+</br>
+
+**2-2) Local Structure 정의 후 사용**
+- 프로그램 안에서만 쓰는 로컬 구조체를 직접 만드는 것
+- SE11(글로벌 타입) 안 쓰고, TYPES 로 구조체를 만들고 DATA 로 변수 생성
+```abap
+TYPES: BEGIN OF 구조체타입명,
+         필드명 TYPE 데이터타입,
+         필드명 TYPE 데이터타입,
+       END OF 구조체타입명.
+
+DATA 구조체변수명 TYPE 구조체타입명.
+```
+```abap
+TYPES: BEGIN OF ts_flight,
+         carrid   TYPE s_carr_id,
+         connid   TYPE s_conn_id,
+         fldate   TYPE s_date,
+       END OF ts_flight.
+
+DATA gs_flight TYPE ts_flight.
+```
+</br>
+
+**2-3) Local Structure + INCLUDE TYPE (구조체 확장)**
+- 기존 글로벌 Structure를 포함하고, 프로그램 전용 필드를 추가하여 로컬 구조체 확장
+```abap
+DATA: BEGIN OF <로컬구조체변수명>.
+        INCLUDE TYPE <글로벌Structure명>.
+DATA: <추가필드명1> TYPE <데이터타입>,
+      <추가필드명2> TYPE <데이터타입>,
+      END OF <로컬구조체변수명>.
+```
+```abap
+DATA: BEGIN OF gs_flight.
+        INCLUDE TYPE BC400_S_FLIGHT.  " 글로벌 Structure 포함
+DATA: custom1 TYPE CHAR1,
+      custom2 TYPE CHAR1,
+      END OF gs_flight.
+
+gs_flight-carrid = 'AA'.       " 글로벌 필드
+gs_flight-custom1 = 'X'.       " 로컬 필드
+
+WRITE: / gs_flight-carrid, / gs_flight-custom1.
+```
+</br>
+
+**2-4) CUKY / CURR, UNIT / QUAN 주의**
+- `CUKY / CURR` : 금액과 통화키 필드는 항상 짝
+- `UNIT / QUAN` : 수량과 단위 필드도 항상 짝 맞춰야 함
+- 짝이 맞지 않으면 런타임 에러 발생 가능
+
+<img width="509" height="183" alt="image" src="https://github.com/user-attachments/assets/322a985b-def8-4c42-b439-837586fc4215" />
+</br>
+</br>
+
+- currency/quantity 에서 수정해야 함
+<img width="510" height="196" alt="image" src="https://github.com/user-attachments/assets/0d875068-b49d-4bc5-916d-7d8c099c26fe" />
+
+</br>
+</br>
+</br>
+</br>
+
+**3) DB Table 기반 구조체**
+- SE11에서 정의된 Transparent Table을 기준으로 변수를 만들면
+  - `DATA gs_scarr TYPE scarr.` → 구조체 (Work Area, 테이블 한 행)
+  - `DATA gv_carrid TYPE scarr-carrid.` → 단일 필드 (Work Area 아님)
+- 테이블 컬럼이 그대로 구조체 필드로 생성됨
+```abap
+DATA gs_scarr TYPE scarr.       " 구조체: 테이블 한 행을 담음
+DATA gv_carrid TYPE scarr-carrid. " 단일 필드
+```
+</br>
+</br>
+
+**4) MOVE-CORRESPONDING**
+- 구조체/테이블 간 필드 이름이 같은 것만 복사
+- MOVE와 달리 필드 위치 상관없이 안전하게 매핑
+- `MOVE` → 메모리 구조 그대로 복사 (위험), `MOVE-CORRESPONDING` → 동일 이름 필드만 안전하게 복사
+```abap
+MOVE-CORRESPONDING 원본변수 TO 대상변수.
+```
+```abap
+DATA gs_flight    TYPE zsflight_b03.
+DATA gs_b_flight  TYPE bc400_s_flight.
+
+MOVE-CORRESPONDING gs_flight TO gs_b_flight.
+```
+
+</br>
+</br>
+
+---
+</br>
+
+## < ABAP 추가적인 문법 >
+
+**1) CONCATENATE**
+- 여러 문자열을 하나로 이어 붙임
+- `SEPARATED BY` → 문자열 사이에 넣을 구분자(공백, 콤마 등)
+```abap
+CONCATENATE <문자1> <문자2> <문자3> ... INTO <결과변수>
+             [SEPARATED BY <구분자>].
+```
+- CONCATENATE 의 INTO절에 RESPECTING BLANKS 추가 시, 빈칸을 허용함
+```abap
+CONCATENATE 문자1 문자2 문자3 INTO lv_result RESPECTING BLANKS.
+```
+```abap
+DATA gv_result TYPE string.
+PERFORM getToday CHANGING gv_result.
+WRITE: gv_result.
+
+FORM getToday CHANGING VALUE(p_result).
+  CONCATENATE '오늘은' sy-datum+0(4) '년' sy-datum+4(2) '월' sy-datum+6(2) '일 입니다' INTO p_result.
+ENDFORM.
+```
+</br>
+</br>
+
+**2) sy-datum**
+- 현재 시스템 날짜가 자동으로 들어 있는 SAP 시스템 필드
+```abap
+sy-datum  →  YYYYMMDD (8자리 날짜)
+```
+- `+숫자(숫자)` 는 문자열에서 원하는 위치(offset)와 길이(length)만큼 잘라오는 부분 문자열 표현
+- `<offset>` 위치부터 `<length>` 길이만큼 부분 문자열(substring) 을 잘라서 가져오는 문법
+```abap
+<변수>+<offset>(<length>)
+```
+</br>
+
+---
+</br>
+
+## < 실습 코드 >
+### 실습 1
+- FROM 함수 이용한 날짜 출력
+```abap
+DATA gv_result TYPE string.
+PERFORM getToday CHANGING gv_result.
+WRITE: gv_result.
+
+FORM getToday CHANGING VALUE(p_result).
+  CONCATENATE '오늘은' sy-datum+0(4) '년' sy-datum+4(2) '월' sy-datum+6(2) '일 입니다' INTO p_result.
+ENDFORM.
+```
+</br>
+</br>
+
+### 실습 2
+- function group과 function module 이용
+  
+**1) function group 생성**
+
+<img width="510" height="298" alt="image" src="https://github.com/user-attachments/assets/6df20037-fa62-4ad6-916a-7e099d4ff48f" />
+</br>
+</br>
+
+**2) function module 생성**
+
+<img width="531" height="135" alt="image" src="https://github.com/user-attachments/assets/db2e443c-dc3f-4e7f-8a91-4de7d08aca43" />
+</br>
+</br>
+
+**3) importing, exporting, exceptions 표 채우기**
+
+<img width="506" height="98" alt="image" src="https://github.com/user-attachments/assets/093db934-1818-4570-8cb7-ee485303aa09" />
+</br>
+
+<img width="509" height="98" alt="image" src="https://github.com/user-attachments/assets/691cef49-9590-451f-94ac-154a8eb7a623" />
+</br>
+
+<img width="510" height="119" alt="image" src="https://github.com/user-attachments/assets/bba68691-5626-47db-8631-e231139dab62" />
+</br>
+</br>
+
+**4) function module 코드 수정**
+```abap
+FUNCTION z_bc400_03_comp_percentage.
+*"----------------------------------------------------------------------
+*"*"Local Interface:
+*"  IMPORTING
+*"     REFERENCE(IV_ACT) TYPE  BC400_ACT
+*"     REFERENCE(IV_MAX) TYPE  BC400_MAX
+*"  EXPORTING
+*"     REFERENCE(EV_PERCENTAGE) TYPE  BC400_PERC
+*"  EXCEPTIONS
+*"      DIVISION_BY_ZERO
+*"----------------------------------------------------------------------
+
+  IF iv_max = 0.
+    ev_percentage = 0.
+    RAISE division_by_zero.
+  ELSE.
+
+  ENDIF.
+
+ENDFUNCTION.
+```
+</br>
+
+**5) program 코드 수정**
+```abap
+*&---------------------------------------------------------------------*
+*& Report ZBC400_03_COMP
+*&---------------------------------------------------------------------*
+*&
+*&---------------------------------------------------------------------*
+REPORT ZBC400_03_COMP.
+
+TYPES tv_result TYPE p LENGTH 16 DECIMALS 2.
+
+PARAMETERS:
+  pa_int1  TYPE i,
+  pa_op    TYPE c LENGTH 1,
+  pa_int2  TYPE i.
+
+DATA gv_result TYPE tv_result.
+
+IF ( pa_op = '+' OR
+     pa_op = '-' OR
+     pa_op = '*' OR
+     pa_op = '/' AND pa_int2 <> 0 OR
+     pa_op = '%' OR
+     pa_op = 'P' ).
+
+  CASE pa_op.
+    WHEN '+'.
+      gv_result = pa_int1 + pa_int2.
+    WHEN '-'.
+      gv_result = pa_int1 - pa_int2.
+    WHEN '*'.
+      gv_result = pa_int1 * pa_int2.
+    WHEN '/'.
+      gv_result = pa_int1 / pa_int2.
+    WHEN '%'.
+      PERFORM calc_percentage
+        USING
+          pa_int1
+          pa_int2
+        CHANGING
+          gv_result.
+
+      CALL FUNCTION 'Z_BC400_03_COMP_PERCENTAGE'
+        EXPORTING
+          iv_act = pa_int1
+          iv_max = pa_int2
+        IMPORTING
+          EV_PERCENTAGE          = gv_result
+        EXCEPTIONS
+          DIVISION_BY_ZERO       = 1
+          OTHERS = 2.
+
+      IF sy-subrc <> 0.
+        MESSAGE 'error!' TYPE 'E'.
+      ENDIF.
+
+    WHEN 'P'.
+      CALL FUNCTION 'BC400_MOS_POWER'
+        EXPORTING
+          iv_base               = pa_int1
+          iv_power              = pa_int2
+        IMPORTING
+          ev_result             = gv_result
+        EXCEPTIONS
+          power_value_too_high  = 1
+          result_value_too_high = 2
+          OTHERS                = 3.
+      CASE sy-subrc.
+        WHEN 0.
+*         no action needed
+        WHEN 1.
+          WRITE 'Max value of power is 4'(mvp).
+        WHEN 2.
+          WRITE 'Result value too high'(rvh).
+        WHEN 3.
+          WRITE 'Unknown error'(uer).
+      ENDCASE.
+  ENDCASE.
+
+  WRITE: 'Result:'(res), gv_result.
+
+ELSEIF  pa_op = '/'  AND  pa_int2 = 0.
+  WRITE: 'No division by zero!'(dbz).
+ELSE.
+  WRITE: 'Invalid operator!'(iop).
+ENDIF.
+
+FORM calc_percentage  USING    pv_act TYPE i
+                               pv_max TYPE i
+                      CHANGING cv_result TYPE tv_result.
+
+*Simple Error Handling
+  IF pv_max = 0.
+    cv_result = 0.
+    WRITE 'Error in percentage calculation'(epc).
+  ELSE.
+*Calculate result
+    cv_result = pv_act / pv_max * 100.
+  ENDIF.
+
+ENDFORM.                    " calc_percentage
+```
+</br>
+</br>
+
+### 실습 3
+- Structure 이용
+  
+**1) 글로벌 구조체 타입(SE11 Structure)을 이용해 Work Area 생성**
+```abap
+" Structure: 여러개의 컴포넌트로 구성된 Work Area (작업공간)
+" Global data type을 사용하여 structure 변수 생성
+
+DATA: gs_data   TYPE bc400_s_flight,
+      gs_data2  LIKE gs_data,
+      gs_flight TYPE zsflight_b03,
+      gs_scarr  TYPE zscarr_b03.
+
+gs_scarr-carrid = 'AA'.
+gs_scarr-carrname = 'Hello'.
+gs_scarr-currcode = 'KRW'.
+gs_scarr-url = 'www.naver.com'.    " 하나의 structure에 데이터를 넣음
+
+WRITE:/ gs_scarr-carrid,
+      / gs_scarr-carrname.
+```
+</br>
+
+**2) 프로그램 내에서만 사용하는 로컬 구조체 선언 + Work Area 생성**
+```abap
+* Local type structure
+TYPES: BEGIN OF ts_flight,
+          CARRID TYPE S_CARR_ID,
+          CONNID TYPE S_CONN_ID,
+          FLDATE TYPE S_DATE,
+          CITYFROM TYPE S_FROM_CIT,
+          CITYTO TYPE S_TO_CITY,
+       END OF ts_flight.
+
+DATA: gs_flight TYPE ts_flight.
+
+gs_flight-carrid = 'AA'.
+gs_flight-connid = '0017'.
+
+WRITE:/ gs_flight-carrid,
+      / gs_flight-connid.
+```
+</br>
+
+**3) 글로벌 Structure를 가져와 로컬 필드를 추가한 구조체 만들기**
+```abap
+* DB Table을 가지고 변수 생성 시 Structure 타입의 변수가 됨.
+* => 구조체를 가지고 만든 것이기 때문
+
+**********************************************************************
+
+* 기존 global structure 에다가 custom component 추가하여
+* Local Structure 생성
+
+DATA: BEGIN OF gs_flight.
+  INCLUDE TYPE BC400_S_FLIGHT.
+DATA: custom TYPE CHAR1,
+      custom2 TYPE CHAR1,
+      END OF gs_flight.
+
+BREAK-POINT.
+
+WRITE: 'okok'.
+```
+</br>
+
+**4) 최종 실습**
+```abap
+* 1단계
+DATA: gs_flight TYPE ZSFLIGHT_B03.
+gs_flight-carrid = 'AA'.
+gs_flight-connid = '0017'.
+gs_flight-fldate = sy-datum.
+gs_flight-cityfrom = 'Incheon'.
+gs_flight-cityto = 'Seoul'.
+
+WRITE:/ gs_flight-carrid,
+      / gs_flight-connid,
+      / gs_flight-fldate,
+      / gs_flight-cityfrom,
+      / gs_flight-cityto.
+
+** 2단계
+DATA: gs_b_flight TYPE BC400_S_FLIGHT.
+MOVE-CORRESPONDING gs_flight TO gs_b_flight.
+
+WRITE:/ gs_b_flight-carrid,
+      / gs_b_flight-connid,
+      / gs_b_flight-fldate.
+```
+
 </br>
 </br>
 </br>
